Sat 19 Jan 2019 Yasuhiro Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Fix coding style (config.rs, main.rs)
	* Update make targets (add aliases and rename targets)

Fri 11 Jan 2019 Yasuhiro Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Initial commit ;)