@@ -1,3 +1,6 @@
+Mon 21 Jan 2019 Yasuhiro Asaka <yasuhiro.asaka@grauwoelfchen.net>
+	* Add initial implementation of overlap function
+
 Sat 19 Jan 2019 Yasuhiro Asaka <yasuhiro.asaka@grauwoelfchen.net>
 	* Fix coding style (config.rs, main.rs)
 	* Update make targets (add aliases and rename targets)
